# dermal-morphometry

./: CITATION.cff  LICENSE.txt  README.md  pyproject.toml  references.bib
dermal_morphometry/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  export.py  high_res.py  low_res.py  mesh_io.py  nrrd_io.py  preprocessing.py  visualization.py
dermal_morphometry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: README.md  run_synthetic_demo.py
examples/data/: synthetic_roi.nrrd
examples/output/high_res/: README_synthetic_fixed_angle_orientation_method.txt  synthetic_fiber_candidate_ds2_uint8.nrrd  synthetic_fixed_angle_orientation_class_labels_ds2_uint8.nrrd  synthetic_fixed_angle_orientation_class_metrics.csv  synthetic_fixed_angle_orientation_metadata.json  synthetic_structure_tensor_angle_deg_ds2_float32.nrrd  synthetic_structure_tensor_coherence_ds2_float32.nrrd  synthetic_valid_dermis_minus_black_ds2_uint8.nrrd
examples/output/low_res/: P86_candidate_mask_uint8.nrrd  P86_enhanced_fibrous_signal_bright_density.nrrd  P86_local_density_map_float32.nrrd  P86_quantitative_metrics.csv  P86_scientific_metadata.json  P86_skeleton_slice_wise_uint8.nrrd  README_P86_method.txt
tests/: smoke_test.py
